fix layout bug on book transition add book descriptions

--- a/src/app/(home)/styles.css
+++ b/src/app/(home)/styles.css
@@ -15,7 +15,7 @@ body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 }
-img,
+
 picture,
 video,
 canvas,
@@ -23,6 +23,11 @@ svg {
 	display: block;
 	max-width: 100%;
 }
+
+img {
+	max-width: 100%;
+}
+
 input,
 button,
 textarea,
@@ -72,7 +77,6 @@ button {
 	border: none;
 	background: transparent;
 	cursor: pointer;
-	text-align: left;
 	font: inherit;
 	color: inherit;
 }
